# dao-vote

./: .gitignore  Anchor.toml  build_wasm.zsh  ci.zsh  go.mod  go.sum  main.go  scratch.md
obfuscate/: main.go
programs/auth/: Cargo.toml
programs/auth/src/: lib.rs  state.rs
programs/dao/: Cargo.toml
programs/dao/src/: lib.rs  state.rs
src/authl2/: init.go
src/authl2/events/: events.go  helpers.go  registerHolder.go
src/authl2/typestructs/: registerHolder.go
src/cluster/: cluster.go
src/cryptog/: main.go
src/solanarpc/: getters.go
src/triptychdao/: dao.go  propose.go  utils.go
src/utils/: utils.go
tests/: main.go
tests/curl/: getProgAccs.zsh
tests/tests/: auth.go  createDao.go  fetchProposals.go  setProgramIDMany.go  utils.go
wasm/: build.zsh  main.go
wasm/integrations/: certify.go  fetchProposals.go  getProgramID.go  registerAuth.go
wasm/utils/: keys.go  utils.go
