[package]
name = "triptych-dao"
version = "0.1.0"
description = "onchain dao"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
vipers = "1.5.5"
anchor-spl = "0.19.0"
